--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "dev" : "npx nodemon server.js",
+    "start": "node server.js"
   }
 }
